[project]
name = "jupyterproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.5.4,<5.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas-stubs (>=3.0.0,<3.1.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
